# generic-cmp

./: Cargo.toml
src/: lib.rs
