[package]
name = "generic-cmp"
version = "0.1.0"
authors = ["Kitsu <mail@kitsu.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.66"

[dev-dependencies]
quickcheck = "0.9.0"
quickcheck_macros = "0.8.0"
